--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplFootnotes.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/_tmplFootnotes.cshtml
@@ -68,247 +68,18 @@
             </div>
         </div>
 
-        <div style="mso-element: footnote;" id="foot_infraccion_1" data-enciso="1">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_1;" href="#_foot_infraccion_1" name="_foot_infraccion_1">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong><br />
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:<br />
-                    t. Establecer y mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante, colocados por el titular o las autoridades.<br />
-                    (…).
-                </p>
-            </div>
-        </div>
+        {{if COD_MODALIDAD == "01"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/_footnotes.cshtml")
 
-        <div style="mso-element: footnote;" id="foot_infraccion_2_1" data-enciso="2">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_2_1;" href="#_foot_infraccion_2_1" name="_foot_infraccion_2_1">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong><br />
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:<br />
-                    (…).<br />
-                    b. Presentar el informe sobre la ejecución del plan de manejo, de conformidad con el artículo 66.
-                </p>
-            </div>
-        </div>
+        {{else COD_MODALIDAD == "02"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/_footnotes.cshtml")
 
-        <div style="mso-element: footnote;" id="foot_infraccion_2_2" data-enciso="2">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt; ">
-                    <a style="mso-footnote-id: foot_infraccion_2_2;" href="#_foot_infraccion_2_2" name="_foot_infraccion_2_2">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 66.- Informe de ejecución forestal</strong>
-                    <br />
-                    El informe de ejecución forestal tiene por finalidad reportar la implementación de las actividades realizadas en el marco del plan de manejo. Se presenta a la ARFFS y al OSINFOR, dentro de los cuarenta y cinco días calendario de culminado el año operativo; es suscrito por el titular del título habilitante y el regente, en los casos que corresponda. Dicho informe tiene carácter de declaración jurada.
-                    <br />
-                    Los informes de ejecución se clasifican en:<br />
-                    a. Informe de ejecución anual: Se presenta al final del año operativo sobre la base del plan de manejo aprobado.
-                    <br />
-                    b. Informes de ejecución final: Se presenta al finalizar la vigencia del plan de manejo.
-                    <br />
-                    En caso incluya especies consideradas en los Apéndices CITES, la ARFFS, en un plazo máximo de quince días hábiles de recibido el informe, remite una copia al SERFOR.
-                    <br />
-                    En función de cada modalidad de aprovechamiento, el SERFOR aprueba los formatos de los informes de ejecución, en coordinación con el OSINFOR y la ARFFS.
-                </p>
-            </div>
-        </div>
+        {{else COD_MODALIDAD == "03"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/_footnotes.cshtml")
 
-        <div style="mso-element: footnote;" id="foot_infraccion_10" data-enciso="10">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt; ">
-                    <a style="mso-footnote-id: foot_infraccion_10;" href="#_foot_infraccion_10" name="_foot_infraccion_10">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    a. Presentar el plan de manejo y cumplir con su implementación luego de ser aprobado.
-                    <br />
-                    (…)
-                    <br />
-                    k. Demostrar el origen legal de los bienes, productos y subproductos del Patrimonio que tengan en su poder, que hayan aprovechado o administrado.
-                    <br />
-                    (…)
-                </p>
-            </div>
-        </div>
+        {{else COD_MODALIDAD == "04"}}
+        @Html.Partial("~/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/_footnotes.cshtml")
 
-        <div style="mso-element: footnote;" id="foot_infraccion_11" data-enciso="11">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt; ">
-                    <a style="mso-footnote-id: foot_infraccion_11;" href="#_foot_infraccion_11" name="_foot_infraccion_11">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    d. Tener y mantener actualizado el libro de operaciones de acuerdo a los lineamientos aprobados por el SERFOR
-                    <br />
-                    (…)
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_13" data-enciso="13">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_13;" href="#_foot_infraccion_13" name="_foot_infraccion_13">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    u. Cumplir con la implementación de las medidas correctivas y/o mandatos que se emitan como resultado de las acciones de control, supervisión y/o fiscalización ejecutadas por la autoridad competente, según corresponda.
-                    <br />
-                    (…)
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_16" data-enciso="16">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_16;" href="#_foot_infraccion_16" name="_foot_infraccion_16">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    k. Demostrar el origen legal de los bienes, productos y subproductos del Patrimonio que tengan en su poder, que hayan aprovechado o administrado.
-                    <br />
-                    (…)
-                    <br />
-                    r. Movilizar los frutos, productos y subproductos con los documentos autorizados para el transporte.
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_19" data-enciso="19">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_19;" href="#_foot_infraccion_19" name="_foot_infraccion_19">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    a. Cumplir con la implementación del plan de manejo aprobado.
-                    <br />
-                    (…)
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_29" data-enciso="29">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_29;" href="#_foot_infraccion_29" name="_foot_infraccion_29">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>
-                        Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI
-                        <br />"Artículo 172.- Guía de transporte forestal
-                    </strong>
-                    <br />
-                    El transporte de especímenes, productos o subproductos forestales en estado natural o con transformación primaria, se ampara en una Guía de Transporte Forestal (GTF) con carácter de Declaración Jurada, de acuerdo al formato aprobado por el SERFOR.
-                    <br />
-                    Son emisores de las GTF:
-                    <br />
-                    a. Los titulares de títulos habilitantes o regentes, cuando los productos son movilizados desde las áreas de extracción o desde los centros de transformación primaria, ubicadas en las áreas de extracción. (…)”.
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_32" data-enciso="32">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_32;" href="#_foot_infraccion_32" name="_foot_infraccion_32">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    a. Presentar el plan de manejo y cumplir con su implementación luego de ser aprobado.
-                    <br />
-                    (…)
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_b" data-enciso="b">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_b;" href="#_foot_infraccion_b" name="_foot_infraccion_b">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    a. Presentar el plan de manejo y cumplir con su implementación luego de ser aprobado.
-                    <br />
-                    (…)
-                    <br />
-                    k. Demostrar el origen legal de los bienes, productos y subproductos del Patrimonio que tengan en su poder, que hayan aprovechado o administrado.
-                    <br />
-                    (…)
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_b_1" data-enciso="b">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_b_1;" href="#_foot_infraccion_b_1" name="_foot_infraccion_b_1">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Ley N° 26821 - Ley Orgánica para el aprovechamiento sostenible de los recursos naturales Aprovechamiento sostenible de los recursos naturales</strong>
-                    (…)
-                    <br />
-                    <strong>Artículo 28°.-</strong> Los recursos naturales deben aprovecharse en forma sostenible. El aprovechamiento sostenible implica el manejo racional de los recursos naturales teniendo en cuenta su capacidad de renovación, evitando su sobreexplotación y reponiéndolos cualitativa y cuantitativamente, de ser el caso. El aprovechamiento sostenible de los recursos no renovables consiste en la explotación eficiente de los mismos, bajo el principio de sustitución de valores o beneficios reales, evitando o mitigando el impacto negativo sobre otros recursos del entorno y del ambiente.
-                </p>
-            </div>
-        </div>
-
-        <div style="mso-element: footnote;" id="foot_infraccion_e" data-enciso="e">
-            <div class="MsoFootnoteText">
-                <p class="MsoNormal" style="margin-left: 14.2pt; text-indent: -14.2pt; margin-bottom: 0; line-height: 7pt;">
-                    <a style="mso-footnote-id: foot_infraccion_e;" href="#_foot_infraccion_e" name="_foot_infraccion_e">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>
-                    &nbsp;&nbsp;&nbsp;
-                    <strong>Reglamento para la Gestión Forestal, aprobado por Decreto Supremo N° 018-2015-MINAGRI Artículo 43.- Obligaciones de los titulares de títulos habilitantes</strong>
-                    43.1 Los titulares de títulos habilitantes para la gestión forestal tienen las siguientes obligaciones:
-                    <br />
-                    (…)
-                    <br />
-                    c. Cumplir con el pago por derecho de aprovechamiento, de acuerdo al título habilitante.
-                    <br />
-                    <strong>Artículo 114.-</strong> Pago por el derecho de aprovechamiento en concesiones forestales con fines maderables
-                    <br />
-                    El pago por el derecho de aprovechamiento en concesiones forestales con fines maderables comprende los siguientes pagos:
-                    <br />
-                    a. Por superficie: Constituye un pago por mantener vigente el derecho sobre el área total concesionada, cuya tarifa básica por hectárea es equivalente a 0.01% de la UIT. El pago del derecho de vigencia es anual y se cancela hasta el término del año calendario, de acuerdo con las condiciones establecidas por la ARFFS. Este pago es condición para movilizar productos al año siguiente y se realiza independientemente de la ejecución del aprovechamiento forestal.
-                    <br />
-                    b. Por recurso otorgado: Constituye un pago en razón al valor al estado natural de las especies maderables aprovechadas y volumen movilizado.
-                </p>
-            </div>
-        </div>
+        {{/if}}
     </div>
 </script>
