--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_1.cshtml
@@ -24,11 +24,13 @@
         </tr>
     </tbody>
 </table>
+
 {{if infraccion.flgDesvirtua}}
 <ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente (descripción de la conducta).
     </li>
+    {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
             Por Escrito/Carta de fecha XX de XX de 20XX ingresado al OSINFOR con Registro N° XXXXXXXXX, e/la concesionario/a presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:<br /><br />
@@ -55,6 +57,7 @@
             </ul>
         </span>
     </li>
+    {{/if}}
     <li>
         <span>
             En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo, se tiene lo siguiente:
