--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_g.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_g.cshtml
@@ -1,4 +1,5 @@
-﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<h5><strong>Sobre las causales de caducidad imputadas</strong></h5>
+<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
             <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
@@ -9,36 +10,42 @@
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Cumplir con la implementación del plan de manejo aprobado y demostrar el origen legal de los productos aprovechados
+                Demostrar el origen legal de los productos aprovechados, así como movilizar los frutos, productos y subproductos con los documentos autorizados para el transporte.
             </td>
             <td style="border: 1px solid #000;">
-                Literal a) y k) del numeral 43.1 del artículo 43 del RGF.
+                Literales k) y r) del numeral 43.1 del artículo 43 del RGF
+                <a style="mso-footnote-id: foot_infraccion_g_1" href="#_foot_infraccion_g_1" title="">
+                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                </a>.
+                <br />
+                (Indicar si el TH también contiene la obligación)
             </td>
             <td style="border: 1px solid #000;">
-                Numeral 21 del Cuadro de Infracciones y Sanciones en Materia Forestal del Anexo 1 del RISMFFS.
+                Literal g) del numeral 207.2 del artículo 207 del RGF/ Numeral 16 del Anexo 1 del RISMFFS
                 <br /><br />
-                <i>"Talar, extraer y/o aprovechar recursos forestales, sin autorización, en su condición o no de titular del título habilitante, a excepción de los aprovechados por subsistencia"</i>
+                <i>
+                    “Incumplir con las obligaciones o condiciones establecidas en los títulos habilitantes, planes de manejo u otros actos administrativos, diferentes a las causales de caducidad”.” / “Incumplir con las obligaciones legalmente establecidas en los títulos habilitantes, planes de manejo u otros actos administrativos, diferentes a las causales de caducidad”
+                </i>
             </td>
         </tr>
     </tbody>
 </table>
 <ol class="continue" style="margin-left: -37pt;">
-    <li>
-        Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente talar, extraer y/o aprovechar recursos forestales, sin autorización, en su condición o no de titular del título habilitante por un volumen de XX.XXX m3 (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie), a excepción de los aprovechados por subsistencia.
-    </li>
+    {{if informe.COD_TIPO_INFORME == 1}}
     <li>
         <span>
-            Por Escrito/Carta de fecha XX de XX de 20XX ingresado al OSINFOR con Registro N° XXXXXXXXX, e/la concesionario/a presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:<br />
+            Mediante Escrito S/N de fecha XX de XX de 20XX con Registro XX, el administrado presentó sus descargos, donde se advierte los siguientes argumentos que guarda relación con la imputación materia de análisis:
             <ol style="list-style-type: lower-alpha">
-                <li>(Agregar texto original).</li>
-                <li>(Agregar texto original).</li>
-                <li>(Agregar texto original).</li>
+                <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+                <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
+                <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
             </ol>
         </span>
     </li>
     <li>
         <span>
-            Respecto a lo señalado por el/la concesionario/a, se advierte el siguiente análisis:<br />
+            Respecto a lo señalado por el titular, se advierte el siguiente análisis:
+            <br />
             <ul>
                 <li>
                     Con relación al argumento señalado en el acápite a), <strong>XXXXXXXXXXXXXXXXXXXXXXXXXXX</strong>.
@@ -52,17 +59,20 @@
             </ul>
         </span>
     </li>
+    {{/if}}
     <li>
         <span>
-            En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo, se tiene lo siguiente:<br />
+            En el presente caso, de acuerdo a la documentación que obra en el expediente administrativo
+            {{if informe.COD_TIPO_INFORME == 1}}
+            y del análisis de los descargos,
+            {{/if}}
+            ha quedado acreditado lo siguiente:
+            <br /><br />
             <ul>
                 <li>
                     <span>
-                        Del análisis de los resultados obtenidos en la supervisión, cotejada con el Balance de Extracción, de fecha XX de XXXXXXX de XXXX, se advierte que no se justifica el volumen declarado como aprovechado, por un total de XX.XXX m3 de madera, conforme se detalla a continuación:
-                        <br />
-                        <div style="text-align: center;">
-                            <strong>Cuadro N° XX: Volumen injustificado</strong>
-                        </div>
+                        Existe un volumen movilizado de XX correspondiente a la especie XX que no fue declarado ante la autoridad forestal competente, de acuerdo al siguiente detalle:
+                        <br /><br />
                         <table width="560" cellpadding="4" border="0" style="font-family: Arial; font-size: 9pt; border-collapse: collapse; line-height: 150%;">
                             <thead>
                                 <tr style="background-color: #bfbfbf;">
@@ -107,21 +117,25 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <div style="font-size: 9pt; margin-top: 0; text-align: center;">
-                            <strong>Fuente:</strong> Elaboración propia en base al Informe de Supervisión N° ${informe.ANTECEDENTES_DOCS.Inf_Sup.numero || 'XXXXX-XXXX-OSINFOR/08.1.1'}
-                        </div>
                     </span>
                 </li>
                 <li>
-                    El aprovechamiento injustificado de (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie), es atribuible al/la concesionario/a, puesto que no provino de la extracción de los individuos aprovechables declarados en el plan de manejo forestal, instrumento de gestión que comprende las actividades de manejo a desarrollarse en una unidad de aprovechamiento, a fin de realizar un aprovechamiento sostenible del recurso maderable autorizado.
+                    El administrado no cumplió con declarar el volumen aprovechado XX de las especies XX realizado en el marco de su plan de manejo, a través de las Guías de Transporte Forestal, ante el puesto de control correspondiente; a pesar que la fecha límite para efectuar la movilización y consecuente declaración fue hasta el XX de XX del 20XX, fecha de término de vigencia del plan de manejo conforme a lo señalado en la cláusula XX del título habilitante Nº XX.
                 </li>
                 <li>
-                    El aprovechamiento injustificado antes mencionado significa el incumplimiento del plan de manejo forestal, documento que el/la propio/a concesionario/a presentó ante la ARFFS y fue aprobado.
+                    Se imposibilitó acciones de control y vigilancia por parte de la autoridad forestal competente; acciones destinadas, entre otros, a la verificación del origen legal de la madera movilizada o transportada en el ámbito de su jurisdicción
+                    <a style="mso-footnote-id: foot_infraccion_g_2" href="#_foot_infraccion_g_2" title="">
+                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
+                    </a>.
                 </li>
             </ul>
         </span>
     </li>
     <li>
-        Por ello, estando a la evaluación realizada a los actuados en el presente procedimiento, <strong>y siendo que el/la concesionario/a no presentó argumentos de defensa suficientes que logren desacreditar los hechos que sustentan la imputación materia de análisis</strong>, ha quedado <strong>acreditada</strong> la comisión de la infracción tipificada en el numeral 21 del Cuadro de Infracciones en Materia Forestal del Anexo 1 del RISMFFS.
+        En ese contexto, de acuerdo a lo señalado precedentemente y
+        {{if informe.COD_TIPO_INFORME == 1}}
+        siendo que los descargos
+        {{/if}}
+        presentados no desacreditan los hechos que sustentan la imputación, se confirma que el administrado cometió la infracción tipificada en el literal XXXXXXXX.
     </li>
 </ol>
